# SPAD512S-remote-gui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bridge/: __init__.py  config.py  main.py
bridge/core/: __init__.py  acquisition.py  calibration_state.py  instrument.py  ws_hub.py
bridge/protocol/: __init__.py  client.py  commands.py  decoder.py
bridge/routes/: __init__.py  acquire.py  calibration.py  health.py  system.py  ws.py
bridge/services/: __init__.py  file_writer.py  flim.py  health.py  preview.py
docs/: PRD.md  bugs.md  constraints.md  learnings.md  manual-testing.md  plan.md  progress.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
launchers/: README.md  Start SPAD (Mock + GUI).bat  Start SPAD (Mock + GUI).command  start-spad.sh
mock_server/: __init__.py  __main__.py  cli.py  harness.py  protocol.py  server.py  state.py  synthetic_data.py
pre_dev_tests/: conftest.py  test_01_connection_and_sysinfo.py  test_02_acquisition_intensity.py  test_03_acquisition_gated.py  test_04_acquisition_flim.py  test_05_acquisition_raw_1bit.py  test_06_acquisition_styles.py  test_07_calibration.py  test_08_safety_and_health.py  test_09_data_handling.py  test_10_visualization.py  test_11_reproducibility_and_workflow.py  test_12_bridge_reliability.py  test_13_concurrency_and_serialization.py  test_14_mock_vendor_server.py  test_15_end_to_end.py
tests/: conftest.py  test_bridge_api.py  test_health.py  test_mock_tcp.py  test_ws_hub.py
(+40 files in other folders)
