[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spad512s-bridge"
version = "0.1.0"
description = "FastAPI bridge for the Pi Imaging SPAD512² remote control GUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FemtoNano Group, TAU" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["bridge*", "mock_server*"]

[tool.setuptools.package-data]
bridge = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["bridge", "mock_server", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["bridge", "mock_server"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true
